@@ -72,24 +72,24 @@ PCSV_MIN        = 0.000000
 PCSV_MAX        = 1000.000000
 LOGG1           = 4.300000
 LOGG1_ADJ       = 0
-LOGG1_DEL       = -0.500000
-LOGG1_MIN       = -0.500000
-LOGG1_MAX       = -0.500000
+LOGG1_DEL       = 0.010000
+LOGG1_MIN       = 2.000000
+LOGG1_MAX       = 10.000000
 LOGG2           = 4.300000
 LOGG2_ADJ       = 0
-LOGG2_DEL       = -0.500000
-LOGG2_MIN       = -0.500000
-LOGG2_MAX       = -0.500000
+LOGG2_DEL       = 0.010000
+LOGG2_MIN       = 2.000000
+LOGG2_MAX       = 10.000000
 MET1            = 0.000000
 MET1_ADJ        = 0
-MET1_DEL        = -0.500000
-MET1_MIN        = -0.500000
-MET1_MAX        = -0.500000
+MET1_DEL        = 0.010000
+MET1_MIN        = -5.000000
+MET1_MAX        = 5.000000
 MET2            = 0.000000
 MET2_ADJ        = 0
-MET2_DEL        = -0.500000
-MET2_MIN        = -0.500000
-MET2_MAX        = -0.500000
+MET2_DEL        = 0.010000
+MET2_MIN        = -5.000000
+MET2_MAX        = 5.000000
 E               = 0.000000
 E_ADJ           = 0
 E_DEL           = 0.010000
